--- a/now.json
+++ b/now.json
@@ -2,5 +2,11 @@
   "version": 2,
   "name": "photo-everyday",
   "alias": ["photo-everyday.now.sh"],
-  "builds": [{ "src": "package.json", "use": "@now/static-build" }]
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@now/static-build",
+      "config": { "distDir": "build" }
+    }
+  ]
 }
